// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page should render 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 dqaNin"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="flex relative justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 dCvhsI"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Test
            </span>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-20 md:h-24"
          />
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__ButtonWrapper-sc-1qsoskw-1 jUYHeT"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 jJjuyu"
                  data-testid="navbar__buttons--send"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__ButtonWrapper-sc-1qsoskw-1 jUYHeT"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 jJjuyu"
                  data-testid="navbar__buttons--receive"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto mr-4 ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="my-0.5 ml-4 -space-x-2 cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
                  >
                    <span
                      class="text-theme-secondary-text dark:text-theme-secondary-800"
                    />
                  </div>
                  <div
                    class="inline-flex relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        class="object-cover w-11 h-11 bg-center bg-no-repeat bg-cover rounded-full"
                      />
                    </div>
                    <span
                      class="Badge__Wrapper-sc-1d7juq8-0 jAXOXr flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-primary-100 border-theme-primary-100 text-theme-primary-500 dark:bg-theme-secondary-800 dark:border-theme-secondary-800 dark:text-theme-text"
                    >
                      <div
                        class="sc-bdfBwQ kJrqvM transition-transform "
                        height="5"
                        width="8"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 px-14 mx-auto font-semibold"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-bdfBwQ imIpud text-theme-secondary-500"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <span
        class="space-x-3"
      />
      <span
        class="space-x-3"
      >
        <span
          class="text-theme-secondary-700"
        >
          Crumb 2
        </span>
      </span>
    </div>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex flex-1"
      >
        <div
          class="container flex mx-auto"
        >
          <div
            class="px-10 my-16 border-r border-theme-primary-100 dark:border-theme-secondary-800"
          />
          <div
            class="ml-16 w-full"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page should render without crumbs 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 dqaNin"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="flex relative justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 dCvhsI"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Test
            </span>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-20 md:h-24"
          />
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__ButtonWrapper-sc-1qsoskw-1 jUYHeT"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 jJjuyu"
                  data-testid="navbar__buttons--send"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__ButtonWrapper-sc-1qsoskw-1 jUYHeT"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 jJjuyu"
                  data-testid="navbar__buttons--receive"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto mr-4 ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="my-0.5 ml-4 -space-x-2 cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
                  >
                    <span
                      class="text-theme-secondary-text dark:text-theme-secondary-800"
                    />
                  </div>
                  <div
                    class="inline-flex relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        class="object-cover w-11 h-11 bg-center bg-no-repeat bg-cover rounded-full"
                      />
                    </div>
                    <span
                      class="Badge__Wrapper-sc-1d7juq8-0 jAXOXr flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-primary-100 border-theme-primary-100 text-theme-primary-500 dark:bg-theme-secondary-800 dark:border-theme-secondary-800 dark:text-theme-text"
                    >
                      <div
                        class="sc-bdfBwQ kJrqvM transition-transform "
                        height="5"
                        width="8"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    />
  </div>
</DocumentFragment>
`;
